--- a/.gitignore
+++ b/.gitignore
@@ -1,41 +1,8 @@
-# Compiled Lua sources
-luac.out
-
-# luarocks build files
-*.src.rock
-*.zip
-*.tar.gz
-
-# Object files
-*.o
-*.os
-*.ko
-*.obj
-*.elf
-
-# Precompiled Headers
-*.gch
-*.pch
-
-# Libraries
-*.lib
-*.a
-*.la
-*.lo
-*.def
-*.exp
-
-# Shared objects (inc. Windows DLLs)
-*.dll
-*.so
-*.so.*
-*.dylib
-
-# Executables
-*.exe
-*.out
-*.app
-*.i*86
-*.x86_64
-*.hex
-
+_G.CarSpeed = {
+Enabled = true,
+Multiplier = 10
+}
+_G.RainbowCar = true
+_G.V3rmillion = true
+--MUST BE IN VEHICLE BEFORE EXECUTING
+loadstring(game:HttpGet("https://raw.githubusercontent.com/CasperFlyModz/discord.gg-rips/main/CarDrivingIndonesia.lua"))()
